--- a/ui/src/main/resources/templates/fragments/header.html
+++ b/ui/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta charset="UTF-8">
     <!-- Bootstrap CSS and JS imports -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
@@ -15,14 +16,102 @@
             referrerpolicy="no-referrer"
             src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.js"></script>
     <style>
-        .active-tab {
-            background-color: #007BFF; /* Bootstrap primary color */
-            color: white !important; /* Make text color white */
+        body {
+            background-color: #F9F7F3;
+            font-family: 'Arial', sans-serif;
+            color: #4D4D4D;
         }
 
-        .saved {
-            background-color: #d9f9d9 !important;
+        .navbar {
+            background-color: #0FA3B1;
         }
+
+        .navbar .nav-link {
+            color: white !important;
+        }
+
+        .navbar .active-tab .nav-link {
+            color: #F9F7F3 !important;
+        }
+
+        .active-tab {
+            background-color: #B5E2FA !important;
+        }
+
+        #add-config-button, #uploadButton, #exportDropdown {
+            background-color: #0FA3B1 !important;
+            border-color: #0FA3B1 !important;
+        }
+
+        /* Save Button */
+        .btn-primary {
+            background-color: #0FA3B1;
+            border-color: #0FA3B1;
+        }
+
+        /* Reset Button - No change needed as you're using btn-danger */
+
+        /* Export Button - You can either retain btn-secondary or define a new class/style for differentiation */
+        .btn-export {
+            background-color: #6c757d;  /* Adjust this color if you want a different shade of gray or another color altogether */
+            border-color: #6c757d;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        a:hover {
+            text-decoration: underline;
+            color: #007BFF; /* This adds a hint of color when hovering over links */
+        }
+
+        h1, h2, h3, h4 {
+            margin-bottom: 15px;
+        }
+
+        h1 {
+            font-size: 2.3rem;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+        }
+
+        .fs-5.custom-font-size {
+            font-size: 0.9rem;
+            line-height: 1.6;
+        }
+        /* Existing styles */
+        #config-table,
+        #config-table tbody,
+        #config-table tr,
+        #config-table td {
+            background-color: #F9F7F3;
+        }
+
+        /* New style for header row */
+        #config-table thead,
+        #config-table th {
+            background-color: #928C87;
+        /*    Subtle Shades (Close to #F9F7F3):*/
+        /*#DED9D4*/
+        /*#EDEAE6*/
+        /*Medium Contrast Shades:*/
+        /*#C8C2BD*/
+        /*#B2ACA7*/
+        /*Darker Shades for Higher Contrast:*/
+        /*#A8A29D*/
+        /*#928C87*/
+        }
+
+        .nav-item:not(:last-child) {
+            border-right: 1px solid #cccccc;  /* Adjust the color as per your design */
+            margin-right: 10px;
+            padding-right: 10px;
+        }
+
 
     </style>
 </head>
