--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -4,16 +4,12 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .active-tab {
-            background-color: #007BFF; /* Bootstrap primary color */
-            color: white !important; /* Make text color white */
-        }
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar-content">
+<nav class="navbar navbar-expand-lg navbar-dark" th:fragment="navbar-content">
     <div class="container">
-        <a class="navbar-brand" href="#">Menu</a>
+        <a class="navbar-brand" href="/">Menu</a> <!-- Updated href here -->
         <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +23,7 @@
                     <a class="nav-link" href="/export">Export</a>
                 </li>
                 <li class="nav-item" th:classappend="${currentPage == 'export-configuration' ? 'active-tab' : ''}">
-                    <a class="nav-link" href="/export-configuration">Configure Export</a>
+                    <a class="nav-link" href="/export-configuration">Customize</a>
                 </li>
                 <!-- Add other navigation items similarly -->
             </ul>
