--- a/ui/src/main/resources/templates/export-configuration.html
+++ b/ui/src/main/resources/templates/export-configuration.html
@@ -9,8 +9,8 @@
 
 <div class="container mt-4">
     <div class="d-flex align-items-center justify-content-between">
-        <h1>Export Configuration</h1>
-        <button class="btn btn-success" id="add-config-button" type="button">Add New Configuration</button>
+        <h1 style="color: #757575">Export Configuration</h1>
+        <button class="btn btn-success" id="add-config-button" type="button">Add</button>
     </div>
 
 
