--- a/ui/src/main/resources/templates/import.html
+++ b/ui/src/main/resources/templates/import.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header.html :: header}">
     <title>Import Configuration</title>
+    <style>
+    </style>
 </head>
 <body>
 <div th:replace="~{fragments/navbar.html :: navbar-content}"></div>
