--- a/ui/src/main/resources/templates/fragments/header.html
+++ b/ui/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,7 @@
 <head th:fragment="header">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta charset="UTF-8">
+    <title>QA Config Management</title>
     <!-- Bootstrap CSS and JS imports -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
