--- a/ui/src/main/resources/templates/home.html
+++ b/ui/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
         <li><strong>Versioning:</strong> Keep track of configuration changes over time with automatic versioning of exported configuration files.</li>
     </ul>
 
-    <h2><a href="/export-configuration">Custom Export Setup</a></h2>
+    <h2><a href="/export-configuration">Customize Export</a></h2>
     <p>Preconfigure different products in the Configuration Management Tool for quicker and more efficient exports.</p>
     <ul>
         <li><strong>Add Export Template:</strong></li>
